@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

'skinparam classAttributeIconSize 0

'left to right direction


class RegisterEmployeeUI {

}


class RegisterEmployeeController{
__
+ getStoresBranchList()
+ createEmployee(name, passport card number, \ntax number, adress,email adress, telephone number,\nBranch Or Store, type of employee)
}

class Repositories {
__
-Repositories()
+ getInstance() : Repositories
+ getBranchesRepository()

}





class BranchesRepository {
__
+ getBrancheslist()
+ getStoresBranchList()
}

class Branch {
__
+ getBranch()
+ creatEmployee()
}

class Store {
__
+ getStoresBranchList()
+ getStoresList()
+ creatEmployee()
}

abstract Employee {
- String name
- int civilCardNumber
- int taxNumber
- String Adress
- Email email
- int phoneNumber
}

class NetworkManager {
}

class SystemAdministrator {
}

class Agent {
}

class StoreManager {
}


RegisterEmployeeUI .> RegisterEmployeeController


RegisterPropertySaleController .> Repositories : repositories
Repositories -> Repositories :instance
Repositories --> "1" BranchesRepository





BranchesRepository --> "*" Branch
Branch --> "*" Store
Store --> "*" Employee : Employs



Employee <|-- NetworkManager : extends
Employee <|-- SystemAdministrator : extends
Employee <|-- StoreManager : extends
Employee <|-- Agent : extends







RegisterPropertySaleController ..> BranchesRepository



@enduml